cmake_minimum_required(VERSION 3.10)
project(search_pattern)
FILE(GLOB_RECURSE SRC ${PROJECT_SOURCE_DIR}/*.cpp)
include_directories(${PROJECT_SOURCE_DIR})
add_subdirectory(${PROJECT_SOURCE_DIR}/test)
message("${SRC}")
add_executable(${PROJECT_NAME}  ${SRC})
add_definitions(-Dtest)
install(TARGETS ${PROJECT_NAME} DESTINATION bin)
set(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/BUILD/)